--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-  <title>My Quidditch Team</title>
+  <title>My Player Team</title>
   <style>
     .card:hover {
       background-color: whitesmoke;
@@ -24,7 +24,7 @@
 
   <!-- Navigation bar -->
   <nav class="navbar navbar-light bg-light justify-content-between">
-    <a class="navbar-brand">QuidditchTeam</a>
+    <a class="navbar-brand">PlayerTeam</a>
     <button id="logout" class="btn btn-danger">Logout</button>
   </nav>
 
